# controller/api/user.controller.go
@@ -7,8 +7,6 @@ import (
 	"platform-sample/model"
 	"platform-sample/service"
 	"strconv"
-
-	//"github.com/labstack/echo"
 )
 
 type UserController struct {
@@ -27,6 +25,13 @@ func (userController *UserController) Init(e *echo.Group) {
 	e.PATCH("", userController.updateUser)
 }
 
+// @Summary Create user
+// @Description Create new user
+// @Accept json
+// @Produce json
+// @Param user body model.User true "body of the user"
+// @Success 203 {object} model.User
+// @Router /users [post]
 func (userController *UserController) createUser(c echo.Context) error {
 	user := &model.User{}
 	bindErr := c.Bind(user)
@@ -41,6 +46,12 @@ func (userController *UserController) createUser(c echo.Context) error {
 	return c.JSON(http.StatusCreated, createUser)
 }
 
+// @Summary Get all users
+// @Description Get all user's info
+// @Accept json
+// @Produce json
+// @Success 200 {object} model.User
+// @Router /users [get]
 func (userController *UserController) getUsers(c echo.Context) error {
 	users, err := userController.UserService.GetUsers()
 	if err != nil {
@@ -50,6 +61,13 @@ func (userController *UserController) getUsers(c echo.Context) error {
 	return c.JSON(http.StatusOK, users)
 }
 
+// @Summary Delete user
+// @Description Delete user's info
+// @Accept json
+// @Produce json
+// @Param id path string true "id of the user"
+// @Success 204 {object} model.User
+// @Router /users/{id} [delete]
 func (userController *UserController) deleteUser(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -64,6 +82,13 @@ func (userController *UserController) deleteUser(c echo.Context) error {
 	return c.JSON(http.StatusOK,nil)
 }
 
+// @Summary Get user
+// @Description Get user's info
+// @Accept json
+// @Produce json
+// @Param id path string true "id of the user"
+// @Success 200 {object} model.User
+// @Router /users/{id} [get]
 func (userController *UserController) getUser(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -77,6 +102,13 @@ func (userController *UserController) getUser(c echo.Context) error {
 	return c.JSON(http.StatusOK,user)
 }
 
+// @Summary Update user
+// @Description Get user's info
+// @Accept json
+// @Produce json
+// @Param name body model.User true "body of the user"
+// @Success 201 {object} model.User
+// @Router /users [patch]
 func (userController *UserController) updateUser(c echo.Context) error {
 	user := &model.User{}
 	bindErr := c.Bind(user)
